Solved USACO 3SUM

--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -234,8 +234,8 @@ add_executable(recording "Past Contests/2013 - 2014/Silver/X 3. 2014 January Sil
 set_target_properties(recording PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2013 - 2014/Silver/X 3. 2014 January Silver/X 3. Recording the Moolympics")
 add_executable(boards "Past Contests/2019 - 2020/Gold/X 2. 2020 January Gold/X 3. Springboards/boards.cpp")
 set_target_properties(boards PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2019 - 2020/Gold/X 2. 2020 January Gold/X 3. Springboards")
-add_executable(threesum "Past Contests/2019 - 2020/Gold/X 2. 2020 January Gold/X 2. Farmer John Solves 3SUM/threesum.cpp")
-set_target_properties(threesum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2019 - 2020/Gold/X 2. 2020 January Gold/X 2. Farmer John Solves 3SUM")
+add_executable(threesum "Past Contests/2019 - 2020/Gold/X 2. 2020 January Gold/Y 2. Farmer John Solves 3SUM/threesum.cpp")
+set_target_properties(threesum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2019 - 2020/Gold/X 2. 2020 January Gold/Y 2. Farmer John Solves 3SUM")
 add_executable(mirrors "Past Contests/2012 - 2013/Bronze/X 5. 2013 January Bronze/X 1. Mirrors/mirrors.cpp")
 set_target_properties(mirrors PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2012 - 2013/Bronze/X 5. 2013 January Bronze/X 1. Mirrors")
 add_executable(paint_bronze "Past Contests/2012 - 2013/Bronze/X 5. 2013 January Bronze/Y 2. Painting the Fence/paint_bronze.cpp")
