Solved USACO Training Party Lamps

--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -378,3 +378,5 @@ add_executable(milkvisits_gold "Past Contests/2019 - 2020/Gold/X 1. 2019 Decembe
 set_target_properties(milkvisits_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2019 - 2020/Gold/X 1. 2019 December Gold/Y 2. Milk Visits")
 add_executable(promote "Past Contests/2016 - 2017/Platinum/X 2. 2017 January Platinum/Y 1. Promotion Counting/promote.cpp")
 set_target_properties(promote PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Platinum/X 2. 2017 January Platinum/Y 1. Promotion Counting")
+add_executable(lamps "Training/Chapter 2/X Section 2.2/Y 4. Party Lamps/lamps.cpp")
+set_target_properties(lamps PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Training/Chapter 2/X Section 2.2/Y 4. Party Lamps")
