Solved USACO Training Preface Numbering

--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -206,8 +206,8 @@ add_executable(frac1 "Training/Chapter 2/Y Section 2.1/Y 2. Ordered Fractions/fr
 set_target_properties(frac1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Training/Chapter 2/Y Section 2.1/Y 2. Ordered Fractions")
 add_executable(castle "Training/Chapter 2/Y Section 2.1/Y 1. The Castle/castle.cpp")
 set_target_properties(castle PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Training/Chapter 2/Y Section 2.1/Y 1. The Castle")
-add_executable(preface "Training/Chapter 2/X Section 2.2/X 1. Preface Numbering/preface.cpp")
-set_target_properties(preface PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Training/Chapter 2/X Section 2.2/X 1. Preface Numbering")
+add_executable(preface "Training/Chapter 2/X Section 2.2/Y 1. Preface Numbering/preface.cpp")
+set_target_properties(preface PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Training/Chapter 2/X Section 2.2/Y 1. Preface Numbering")
 add_executable(subset "Training/Chapter 2/X Section 2.2/Y 2. Subset Sums/subset.cpp")
 set_target_properties(subset PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Training/Chapter 2/X Section 2.2/Y 2. Subset Sums")
 add_executable(runround "Training/Chapter 2/X Section 2.2/X 3. Runaround Numbers/runround.cpp")
