--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -360,12 +360,12 @@ add_executable(paint_time "Past Contests/2020 - 2021/Silver/Y 2. 2021 January Si
 set_target_properties(paint_time PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Silver/Y 2. 2021 January Silver/Y 2. No Time to Paint")
 add_executable(spaced_out "Past Contests/2020 - 2021/Silver/Y 2. 2021 January Silver/Y 3. Spaced Out/spaced_out.cpp")
 set_target_properties(spaced_out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Silver/Y 2. 2021 January Silver/Y 3. Spaced Out")
-add_executable(udder_gold "Past Contests/2020 - 2021/Gold/X 2. 2021 January Gold/X 1. Uddered but not Herd/udder_gold.cpp")
-set_target_properties(udder_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/X 2. 2021 January Gold/X 1. Uddered but not Herd")
-add_executable(telephone "Past Contests/2020 - 2021/Gold/X 2. 2021 January Gold/Y 2. Telephone/telephone.cpp")
-set_target_properties(telephone PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/X 2. 2021 January Gold/Y 2. Telephone")
-add_executable(mooves_gold "Past Contests/2020 - 2021/Gold/X 2. 2021 January Gold/Y 3. Dance Mooves/mooves_gold.cpp")
-set_target_properties(mooves_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/X 2. 2021 January Gold/Y 3. Dance Mooves")
+add_executable(udder_gold "Past Contests/2020 - 2021/Gold/Y 2. 2021 January Gold/Y 1. Uddered but not Herd/udder_gold.cpp")
+set_target_properties(udder_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/Y 2. 2021 January Gold/Y 1. Uddered but not Herd")
+add_executable(telephone "Past Contests/2020 - 2021/Gold/Y 2. 2021 January Gold/Y 2. Telephone/telephone.cpp")
+set_target_properties(telephone PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/Y 2. 2021 January Gold/Y 2. Telephone")
+add_executable(mooves_gold "Past Contests/2020 - 2021/Gold/Y 2. 2021 January Gold/Y 3. Dance Mooves/mooves_gold.cpp")
+set_target_properties(mooves_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/Y 2. 2021 January Gold/Y 3. Dance Mooves")
 add_executable(cbarn2 "Past Contests/2015 - 2016/Gold/X 3. 2016 February Gold/Y 2. Circular Barn Revisited/cbarn2.cpp")
 set_target_properties(cbarn2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2015 - 2016/Gold/X 3. 2016 February Gold/Y 2. Circular Barn Revisited")
 add_executable(hopscotch_gold "Past Contests/2014 - 2015/Gold/X 3. 2015 February Gold/X 1. Cow Hopscotch/hopscotch_gold.cpp")
