Solved Codeforces Team Building - https://codeforces.com/contest/1316/problem/E

--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -392,3 +392,5 @@ add_executable(art3 "Past Contests/2020 - 2021/Gold/X 3. 2021 February Gold/X 2.
 set_target_properties(art3 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/X 3. 2021 February Gold/X 2. Modern Art 3")
 add_executable(ccount "Past Contests/2020 - 2021/Gold/X 3. 2021 February Gold/X 3. Count the Cows/ccount.cpp")
 set_target_properties(ccount PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/X 3. 2021 February Gold/X 3. Count the Cows")
+add_executable(guard "Past Contests/2014 - 2015/Gold/X 1. 2014 December Gold/X 1. Guard Mark/guard.cpp")
+set_target_properties(guard PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2014 - 2015/Gold/X 1. 2014 December Gold/X 1. Guard Mark")
