--- a/Codeforces/AlgorithmsThread Tree Basics Contest/CMakeLists.txt
+++ b/Codeforces/AlgorithmsThread Tree Basics Contest/CMakeLists.txt
@@ -3,11 +3,24 @@ project(AlgorithmsThread_Tree_Basics_Contest)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(A "Y A. Circumference of a Tree/A.cpp")
-add_executable(B "Y B. Dynamic Diameter/B.cpp")
-add_executable(C "Y C. Sloth Naptime/C.cpp")
-if(CMAKE_BUILD_TYPE MATCHES Debug)
-    target_compile_definitions("A" PUBLIC DEBUG=1)
-    target_compile_definitions("B" PUBLIC DEBUG=1)
-    target_compile_definitions("C" PUBLIC DEBUG=1)
-endif()
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
+
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
+
+file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp")
+
+foreach (FILE ${FILES})
+    if (NOT ${FILE} MATCHES "cmake-build*")
+        get_filename_component(FILE_NAME ${FILE} NAME)
+        string(REPLACE ".cpp" "" TARGET_NAME "${FILE_NAME}")
+        string(REPLACE "/" "-" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE " " "_" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE "." "" TARGET_NAME "${TARGET_NAME}")
+        add_executable(${TARGET_NAME} "${FILE}")
+        get_filename_component(PARENT_DIR ${FILE}/.. ABSOLUTE)
+        message(${TARGET_NAME} " = " ${FILE})
+        message(${PARENT_DIR})
+        set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PARENT_DIR}")
+    endif ()
+endforeach ()
