Solved Codeforces Round #710 (Div. 3) - F. Triangular Paths - https://codeforces.com/contest/1506/problem/F

--- a/Codeforces/Codeforces Round #710 (Div. 3)/Problems/task6/task-info.yaml
+++ b/Codeforces/Codeforces Round #710 (Div. 3)/Problems/task6/task-info.yaml
@@ -58,4 +58,6 @@ files:
     }
   learner_created: false
 feedback_link: https://codeforces.com/contest/1506/problem/F?locale=en
-status: Unchecked
+status: Solved
+feedback:
+  time: Fri, 16 Apr 2021 18:21:52 UTC
