Solved Atcoder Educational DP Contest - S. Digit Sum - https://atcoder.jp/contests/dp/tasks/dp_s

--- a/AtCoder/Educational DP Contest/CMakeLists.txt
+++ b/AtCoder/Educational DP Contest/CMakeLists.txt
@@ -2,34 +2,24 @@ cmake_minimum_required(VERSION 3.17)
 project(Educational_DP_Contest)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
-set(GCC_COVERAGE_COMPILE_FLAGS "-Wshadow -Wall -o -fsanitize=address -fsanitize=undefined -D_GLIBCXX_DEBUG -g")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
-add_executable(A-Frog_1 "Y A - Frog 1.cpp")
-add_executable(B-Frog_2 "Y B - Frog 2.cpp")
-add_executable(C-Vacation "Y C - Vacation.cpp")
-add_executable(D-Knapsack_1 "Y D - Knapsack 1.cpp")
-add_executable(E-Knapsack_2 "Y E - Knapsack 2.cpp")
-add_executable(F-LCS "Y F - LCS.cpp")
-add_executable(G-Longest_Path "Y G - Longest Path.cpp")
-add_executable(H-Grid_1 "Y H - Grid 1.cpp")
-add_executable(I-Coins "Y I - Coins.cpp")
-add_executable(J-Sushi "X J - Sushi.cpp")
-add_executable(K-Stones "Y K - Stones.cpp")
-add_executable(L-Deque "Y L - Deque.cpp")
-add_executable(M-Candies "Y M - Candies.cpp")
-add_executable(N-Slimes "Y N - Slimes.cpp")
-add_executable(O-Matching "Y O - Matching.cpp")
-add_executable(P-Independent_Set "Y P - Independent Set.cpp")
-add_executable(Q-Flowers "Y Q - Flowers.cpp")
-add_executable(R-Walk "X R - Walk.cpp")
-add_executable(S-Digit_Sum "X S - Digit Sum.cpp")
-add_executable(T-Permutation "X T - Permutation.cpp")
-add_executable(U-Grouping "X U - Grouping.cpp")
-add_executable(W-Intervals "X W - Intervals.cpp")
-add_executable(X-Tower "X X - Tower.cpp")
-add_executable(Y-Grid_2 "X Y - Grid 2.cpp")
-add_executable(Z-Frog_3 "X Z - Frog 3.cpp")
-add_executable(V-Subtree "Y V - Subtree.cpp")
-set_target_properties(V-Subtree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
+
+file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp")
+
+foreach (FILE ${FILES})
+    if (NOT ${FILE} MATCHES "cmake-build*")
+        get_filename_component(FILE_NAME ${FILE} NAME)
+        string(REPLACE ".cpp" "" TARGET_NAME "${FILE_NAME}")
+        string(REPLACE "/" "-" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE " " "_" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE "." "" TARGET_NAME "${TARGET_NAME}")
+        add_executable(${TARGET_NAME} "${FILE}")
+        get_filename_component(PARENT_DIR ${FILE}/.. ABSOLUTE)
+        message(${TARGET_NAME} " = " ${FILE})
+        message(${PARENT_DIR})
+        set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PARENT_DIR}")
+    endif ()
+endforeach ()
