--- a/mBIT/CMakeLists.txt
+++ b/mBIT/CMakeLists.txt
@@ -3,14 +3,28 @@ project(mBIT)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
-add_executable(Apple_Pie "Fall 2020/Standard/Y A. Apple Pie/Apple Pie.cpp")
-set_target_properties(Apple_Pie PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Fall 2020/Standard/Y A. Apple Pie")
-add_executable(Double_Trouble "Fall 2020/Standard/Y B. Double Trouble/Double Trouble.cpp")
-set_target_properties(Double_Trouble PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Fall 2020/Standard/Y B. Double Trouble")
-add_executable(Explorers "Fall 2020/Standard/Y C. Explorers/Explorers.cpp")
-set_target_properties(Explorers PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Fall 2020/Standard/Y C. Explorers")
-add_executable(Banquet "Fall 2020/Standard/X D. Banquet/Banquet.cpp")
-set_target_properties(Banquet PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Fall 2020/Standard/X D. Banquet")
-add_executable(Climbing_Trees "Fall 2020/Standard/X E. Climbing Trees/Climbing Trees.cpp")
-set_target_properties(Climbing_Trees PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Fall 2020/Standard/X E. Climbing Trees")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
+
+file(TOUCH ${CMAKE_CURRENT_BINARY_DIR}/pch.cpp)
+add_library(PCH OBJECT ${CMAKE_BINARY_DIR}/pch.cpp)
+target_precompile_headers(PCH PRIVATE /usr/local/Cellar/gcc/10.2.0/include/c++/10.2.0/x86_64-apple-darwin19/bits/stdc++.h)
+
+file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp")
+
+foreach (FILE ${FILES})
+    if (NOT ${FILE} MATCHES "cmake-build*")
+        get_filename_component(FILE_NAME ${FILE} NAME)
+        string(REPLACE ".cpp" "" TARGET_NAME "${FILE_NAME}")
+        string(REPLACE "/" "-" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE " " "_" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE "." "" TARGET_NAME "${TARGET_NAME}")
+        add_executable(${TARGET_NAME} "${FILE}")
+        get_filename_component(PARENT_DIR ${FILE}/.. ABSOLUTE)
+        message(${TARGET_NAME} " = " ${FILE})
+        message(${PARENT_DIR})
+        set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PARENT_DIR}")
+        target_precompile_headers(${TARGET_NAME} REUSE_FROM PCH)
+    endif ()
+endforeach ()
