--- a/cf/CMakeLists.txt
+++ b/cf/CMakeLists.txt
@@ -12,7 +12,7 @@ file(TOUCH ${CMAKE_CURRENT_BINARY_DIR}/pch.cpp)
 add_library(PCH OBJECT ${CMAKE_BINARY_DIR}/pch.cpp)
 target_precompile_headers(PCH PRIVATE /usr/local/Cellar/gcc/10.2.0/include/c++/10.2.0/x86_64-apple-darwin19/bits/stdc++.h)
 
-file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp")
+file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp" "*.cp")
 
 foreach (FILE ${FILES})
     if (NOT ${FILE} MATCHES "cmake-build*")
@@ -21,6 +21,8 @@ foreach (FILE ${FILES})
         get_filename_component(FILE_NAME ${FILE} NAME)
 
         string(REPLACE ".cpp" "" TARGET_NAME "${FILE_NAME}")
+        string(REPLACE ".cp" "" TARGET_NAME "${TARGET_NAME}")
+
         string(REPLACE "/" "-" TARGET_NAME "${TARGET_NAME}")
         string(REPLACE " " "_" TARGET_NAME "${TARGET_NAME}")
         string(REPLACE "." "" TARGET_NAME "${TARGET_NAME}")
@@ -30,7 +32,7 @@ foreach (FILE ${FILES})
         get_filename_component(PARENT_DIR ${FILE}/.. ABSOLUTE)
         message(${TARGET_NAME} " = " ${FILE})
         message(${PARENT_DIR})
-        set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PARENT_DIR}")
+        set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PARENT_DIR}" LINKER_LANGUAGE CXX)
         target_precompile_headers(${TARGET_NAME} REUSE_FROM PCH)
     endif ()
 endforeach ()
