--- a/Project Euler C++/CMakeLists.txt
+++ b/Project Euler C++/CMakeLists.txt
@@ -1,16 +1,30 @@
 cmake_minimum_required(VERSION 3.16)
 project(Project_Euler_C__)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Y_1 "Y 1. Multiples of 3 and 5.cpp")
-add_executable(Y_2 "Y 2. Even Fibonacci numbers.cpp")
-add_executable(Y_3 "Y 3. Largest prime factor.cpp")
-add_executable(Y_4 "Y 4. Largest palindrome product.cpp")
-add_executable(Y_5 "Y 5. Smallest multiple.cpp")
-add_executable(Y_6 "Y 6. Sum square difference.cpp")
-add_executable(Y_7 "Y 7. 10001st prime.cpp")
-add_executable(Y_8 "Y 8. Largest product in a series.cpp")
-add_executable(Y_9 "Y 9. Special Pythagorean triple.cpp")
-add_executable(Y_10 "Y 10. Summation of primes.cpp")
-add_executable(Y_81 "Y 81. Path sum - two ways.cpp")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
+
+file(TOUCH ${CMAKE_CURRENT_BINARY_DIR}/pch.cpp)
+add_library(PCH OBJECT ${CMAKE_BINARY_DIR}/pch.cpp)
+target_precompile_headers(PCH PRIVATE /usr/local/Cellar/gcc/10.2.0/include/c++/10.2.0/x86_64-apple-darwin19/bits/stdc++.h)
+
+file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp")
+
+foreach (FILE ${FILES})
+    if (NOT ${FILE} MATCHES "cmake-build*")
+        get_filename_component(FILE_NAME ${FILE} NAME)
+        string(REPLACE ".cpp" "" TARGET_NAME "${FILE_NAME}")
+        string(REPLACE "/" "-" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE " " "_" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE "." "" TARGET_NAME "${TARGET_NAME}")
+        add_executable(${TARGET_NAME} "${FILE}")
+        get_filename_component(PARENT_DIR ${FILE}/.. ABSOLUTE)
+        message(${TARGET_NAME} " = " ${FILE})
+        message(${PARENT_DIR})
+        set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PARENT_DIR}")
+        target_precompile_headers(${TARGET_NAME} REUSE_FROM PCH)
+    endif ()
+endforeach ()
