Google Kick Start Practice #1 - https://codingcompetitions.withgoogle.com/kickstart/round/00000000008f4332

--- a/Google Competitions/CMakeLists.txt
+++ b/Google Competitions/CMakeLists.txt
@@ -5,12 +5,12 @@ project(Google_Code_Jam)
 set(CMAKE_CXX_STANDARD 17)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
-set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined")
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined -Wl,-stack_size -Wl,0x10000000")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
 file(TOUCH ${CMAKE_CURRENT_BINARY_DIR}/pch.cpp)
 add_library(PCH OBJECT ${CMAKE_BINARY_DIR}/pch.cpp)
-target_precompile_headers(PCH PRIVATE /usr/local/Cellar/gcc/10.2.0/include/c++/10.2.0/x86_64-apple-darwin19/bits/stdc++.h)
+target_precompile_headers(PCH PRIVATE /usr/local/Cellar/gcc/11.2.0/include/c++/11.2.0/x86_64-apple-darwin19/bits/stdc++.h)
 
 file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp")
 
