--- a/Project Euler C++/CMakeLists.txt
+++ b/Project Euler C++/CMakeLists.txt
@@ -19,6 +19,8 @@ foreach (FILE ${FILES})
         string(REPLACE ".cpp" "" TARGET_NAME "${FILE_NAME}")
         string(REPLACE "/" "-" TARGET_NAME "${TARGET_NAME}")
         string(REPLACE " " "_" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE "?" "_" TARGET_NAME "${TARGET_NAME}")
+        string(REPLACE "\"" "_" TARGET_NAME "${TARGET_NAME}")
         string(REPLACE "." "" TARGET_NAME "${TARGET_NAME}")
         add_executable(${TARGET_NAME} "${FILE}")
         get_filename_component(PARENT_DIR ${FILE}/.. ABSOLUTE)
