--- a/cf/CMakeLists.txt
+++ b/cf/CMakeLists.txt
@@ -8,9 +8,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL -std=c++20")
 set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined -fpermissive")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
-file(TOUCH ${CMAKE_CURRENT_BINARY_DIR}/pch.cpp)
-add_library(PCH OBJECT ${CMAKE_BINARY_DIR}/pch.cpp)
-target_precompile_headers(PCH PRIVATE /usr/local/Cellar/gcc/11.2.0/include/c++/11.2.0/x86_64-apple-darwin19/bits/stdc++.h)
+#file(TOUCH ${CMAKE_CURRENT_BINARY_DIR}/pch.cpp)
+#add_library(PCH OBJECT ${CMAKE_BINARY_DIR}/pch.cpp)
+#target_precompile_headers(PCH PRIVATE /usr/local/Cellar/gcc/11.2.0/include/c++/11.2.0/x86_64-apple-darwin19/bits/stdc++.h)
 
 file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp" "*.cp")
 
@@ -33,6 +33,6 @@ foreach (FILE ${FILES})
         message(${TARGET_NAME} " = " ${FILE})
         message(${PARENT_DIR})
         set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PARENT_DIR}" LINKER_LANGUAGE CXX)
-        target_precompile_headers(${TARGET_NAME} REUSE_FROM PCH)
+#        target_precompile_headers(${TARGET_NAME} REUSE_FROM PCH)
     endif ()
 endforeach ()
