--- a/ICPC/CMakeLists.txt
+++ b/ICPC/CMakeLists.txt
@@ -18,7 +18,9 @@ file(GLOB_RECURSE FILES RELATIVE ${PROJECT_SOURCE_DIR} CONFIGURE_DEPENDS "*.cpp"
 foreach (FILE ${FILES})
     if (NOT ${FILE} MATCHES "cmake-build*")
         get_filename_component(second_dir "${FILE}/../.." ABSOLUTE)
+        get_filename_component(third_dir "${FILE}/../../.." ABSOLUTE)
         get_filename_component(second_last_dir "${second_dir}" NAME)
+        get_filename_component(third_last_dir "${third_dir}" NAME)
         get_filename_component(FILE_NAME ${FILE} NAME)
 
         string(REPLACE ".cpp" "" TARGET_NAME "${FILE_NAME}")
@@ -27,7 +29,7 @@ foreach (FILE ${FILES})
         string(REPLACE "/" "-" TARGET_NAME "${TARGET_NAME}")
         string(REPLACE " " "_" TARGET_NAME "${TARGET_NAME}")
         string(REPLACE "." "" TARGET_NAME "${TARGET_NAME}")
-        set(TARGET_NAME ${second_last_dir}${TARGET_NAME})
+        set(TARGET_NAME ${third_last_dir}${second_last_dir}${TARGET_NAME})
 
         add_executable(${TARGET_NAME} "${FILE}")
         get_filename_component(PARENT_DIR ${FILE}/.. ABSOLUTE)
